# pygments-liquid2

./: README.md  liquid2_lexer.py  pyproject.toml
src/pygments_liquid2/: __about__.py  liquid2_lexer.py
tests/: test_lex_block_comment.py  test_lex_raw_tag.py  test_liquid2_comment.py
tests/examplefiles/: example.liquid
